<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lend_red_base"
    tools:context=".ui.LoginActivity">

    <ImageView
        style="@style/LendImage70"
        android:id="@+id/activity_login_image_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/HeadTitle"
        android:id="@+id/activity_login_action"
        android:text="@string/login_action"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_login_image_view" />

    <ImageView
        android:id="@+id/email_ico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_email_24"
        app:layout_constraintEnd_toStartOf="@+id/activity_login_email_input"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@+id/activity_login_email_label"
        app:layout_constraintTop_toTopOf="@+id/activity_login_email_input" />

    <TextView
        android:id="@+id/activity_login_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_email"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/email_ico"
        app:layout_constraintTop_toBottomOf="@+id/activity_login_action"
        app:layout_constraintVertical_bias="0.2" />

    <EditText
        style="@style/EditTextWhiteBackgroundRed"
        android:id="@+id/activity_login_email_input"
        android:layout_marginEnd="20dp"
        android:inputType="textEmailAddress"
        android:hint="@string/pseudo_email"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/email_ico"
        app:layout_constraintTop_toBottomOf="@+id/activity_login_email_label" />

    <TextView
        android:id="@+id/activity_login_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_password"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/email_ico"
        app:layout_constraintTop_toBottomOf="@+id/activity_login_email_input"
        app:layout_constraintVertical_bias="0.40" />

    <ImageView
        android:id="@+id/pass_ico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/activity_login_password_label"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_outline_lock_24"
        android:layout_marginStart="20dp"
        />

    <EditText
        style="@style/EditTextWhiteBackgroundRed"
        android:id="@+id/activity_login_password_input"
        android:layout_marginEnd="20dp"
        android:inputType="textPassword"
        app:backgroundTint="@color/white"
        android:hint="@string/pseudo_password"
        app:layout_constraintStart_toEndOf="@+id/pass_ico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_login_password_label" />

    <Button
        android:id="@+id/activity_login_sign_in_button"
        style="@style/LightButton"
        android:text="@string/login_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>