<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f00"
    tools:context=".ui.SignInActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-74dp">

    <ImageView
        android:id="@+id/sign_in_activity_lend_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@mipmap/ic_splash_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_activity_phrase_effect"
        app:layout_constraintStart_toStartOf="@+id/sign_in_activity_phrase_effect"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_activity_title"
        app:layout_constraintVertical_bias="0.018" />

    <TextView
        android:id="@+id/sign_in_activity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_text"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_activity_lend_image"
        app:layout_constraintStart_toStartOf="@+id/sign_in_activity_lend_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.262" />

    <TextView
        android:id="@+id/sign_in_activity_phrase_effect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/sign_in_phrase_effect"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_activity_lend_image" />

    <Button
        android:id="@+id/sign_in_activity_sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#fff"
        android:text="@string/sign_in_button"
        android:textColor="#f00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_activity_phrase_effect"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_new"
        app:backgroundTint="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_activity_sign_in_button" />


</androidx.constraintlayout.widget.ConstraintLayout>