<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MenuItemDetailActivity">

    <ImageView
        android:id="@+id/menu_detail_image"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_splash_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/menu_detail_title"
        style="@style/DetailTitleDark"
        android:text="Bolo de chocolate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_detail_image" />

    <TextView
        android:id="@+id/menu_detail_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="A fundadora da rede, atual sócia-diretora industrial, Ivani Calarezi, apostava em uma ideia ainda inédita no país: vender bolos artesanais em pedaços, permitindo ao cliente escolher o tamanho desejado da fatia."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/menu_detail_title"
        app:layout_constraintTop_toBottomOf="@+id/menu_detail_title" />

    <TextView
        android:id="@+id/menu_detail_price_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/price_value"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_detail_description" />

    <TextView
        android:id="@+id/menu_detail_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="R$ 34,40"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/menu_detail_price_label"
        app:layout_constraintTop_toBottomOf="@+id/menu_detail_price_label" />

    <ImageView
        android:id="@+id/menu_detail_watch_icon"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_margin="8dp"
        android:src="@drawable/ic_baseline_watch_later_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_detail_price" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/available_times_label"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/menu_detail_watch_icon"
        app:layout_constraintStart_toEndOf="@+id/menu_detail_watch_icon"
        app:layout_constraintTop_toTopOf="@+id/menu_detail_watch_icon" />

    <ListView
        android:id="@+id/menu_detail_available_times"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="12dp"
        android:divider="@null"
        android:dividerHeight="0dp"
        app:layout_constraintBottom_toTopOf="@+id/menu_detail_reserv_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_detail_watch_icon"
        tools:listitem="@layout/available_times" />

    <Button
        android:id="@+id/menu_detail_reserv_button"
        style="@style/LendColorButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/reserv_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>